3.3/cache_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: cache-svc
spec:
  type: NodePort
  ports:
  - name: network-multitool-http
    port: 8082
    protocol: TCP
    nodePort: 30004
  selector:
    app: cache
