3.3/front_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: NodePort
  ports:  
  - name: network-multitool-http
    port: 8081
    protocol: TCP
    nodePort: 30003
  selector:
    app: frontend
