3.3/network_policy_allow_back.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-cache-allow
  namespace: app
spec:
  podSelector: 
    matchLabels: 
      app: backend
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
  policyTypes:
  - Ingress
